--- a/application/views/employer/register.html
+++ b/application/views/employer/register.html
@@ -1,62 +1,72 @@
 <section class="container">
     <div class="row">
-        <h1 class="page-header text-center">Hire Quality Interns</h1>
-        {if(isset($message))}
-            <div class="alert alert-danger" role="alert">{echo $message}</div>
+        <h1 class="page-header text-center">Hire Quality Interns</h1> {if(isset($message))}
+        <div class="alert alert-danger" role="alert">{echo $message}</div>
         {/if}
         <p class="text-center"><a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Continue with Linkedin</a></p>
         <small class="help-block text-center">Note : Only Users having Company page on linkedin can post internship on our site, we take authenticity of listing very seriously</small>
-        <div class="col-md-8 col-md-offset-2 panel panel-default panel-body">
-            <div class="media">
-                <div class="media-left">
-                    <i class="fa fa-check-circle fa-5x"></i>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">Recruit Smart and Eligible applicants</h4>
-                    <p>We have targeted students of IITs, NITs, IIMs, DTU, NSIT, DU etc from all prestigious colleges in India.</p>
-                </div>
+    </div>
+    <h1 class="page-header">Why Us?</h1>
+    <div class="row">
+        <div class="media col-md-3"><br>
+            <div class="media-left">
+                <i class="fa fa-check-circle fa-5x"></i>
             </div>
-            <br><br>
-            <div class="media">
-                <div class="media-left">
-                    <i class="fa fa-globe fa-5x"></i>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">Hold Contest</h4>
-                    <p>You can create/hold contest on our platform by setting the time limit etc, and market it on our platform to get maximum participation.</p>
-                </div>
+            <div class="media-body">
+                <h4 class="media-heading">Recruit Smart and Eligible applicants</h4>
+                <p>We have targeted students of IITs, NITs, IIMs, DTU, NSIT, DU etc from all prestigious colleges in India.</p>
             </div>
-            <br><br>
-            <div class="media">
-                <div class="media-left">
-                    <i class="fa fa-laptop fa-4x"></i>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">Website Integration</h4>
-                    <p>You can integrate internship/opprtunity application on your website to get maximum eligible applicants, which you can manage.</p>
-                </div>
+        </div>
+        <div class="media col-md-3">
+            <div class="media-left">
+                <i class="fa fa-globe fa-5x"></i>
             </div>
-            <br><br>
-            <div class="media">
-                <div class="media-left">
-                    <i class="fa fa-bar-chart fa-4x"></i>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">Advanced Analytics and Reports</h4>
-                    <p>Get Reports on the Reach, Views, clicks on the Opportunity you posted on our platform. Analytics on Number of students applied will be shown.</p>
-                </div>
+            <div class="media-body">
+                <h4 class="media-heading">Hold Contest</h4>
+                <p>You can create/hold contest on our platform by setting the time limit etc, and market it on our platform to get maximum participation.</p>
             </div>
-            <br><br>
-            <div class="media">
-                <div class="media-left">
-                    <i class="fa fa-support fa-4x"></i>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading">Free Setup</h4>
-                    <p>Call at +91-9891048495 and we will help you setup your account.</p>
-                </div>
+        </div>
+        <div class="media col-md-3">
+            <div class="media-left">
+                <i class="fa fa-linkedin-squaere fa-4x"></i>
             </div>
-            <br>
+            <div class="media-body">
+                <h4 class="media-heading">Linkedin Integration</h4>
+                <p>Our Platform is synced with linkedin, so you can browse through the students profile. Call at +91-9891048495 to know more.</p>
+            </div>
+        </div>
+        <div class="media col-md-3">
+            <div class="media-left">
+                <i class="fa fa-users fa-4x"></i>
+            </div>
+            <div class="media-body">
+                <h4 class="media-heading">Team Login(Fast Hiring)</h4>
+                <p>All the team members would be able to login to the platform without remebering password only through linkedin(all page admins)</p>
+            </div>
         </div>
     </div>
+    <h1 class="page-header">Our Simple Pricing</h1>
+    <div class="row">
+        <p>Let us hire students interns for you.</p>
+        <div class="col-md-2"></div>
+        <ul class="list-group text-center col-md-3">
+            <li class="list-group-item disabled">Initial Plan (Free)</li>
+            <li class="list-group-item">Max 3 Internship Post</li>
+            <li class="list-group-item">Access to hire 5 Interns at a time</li>
+            <li class="list-group-item">Access to top 7 Rankers</li>
+            <li class="list-group-item">Only Resume Upload of Students</li>
+            <li class="list-group-item">24*7 Support</li>
+        </ul>
+        <div class="col-md-2"></div>
+        <ul class="list-group text-center col-md-3">
+            <li class="list-group-item disabled">Premium (Rs. 2500/ 6 months)</li>
+            <li class="list-group-item">Unlimited Internship Post</li>
+            <li class="list-group-item">Access to hire 30+ Interns</li>
+            <li class="list-group-item">Access to top 20 Rankers</li>
+            <li class="list-group-item">Customize online test </li>
+            <li class="list-group-item">24*7 Support</li>
+        </ul>
+        <div class="col-md-2"></div>
+    </div>
+    <p class="text-center"><a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Continue with Linkedin</a></p>
 </section>
