--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -65,41 +65,41 @@
     {include layouts/navigation/public.html} {include layouts/modal/message.html} {ayield action}
     <!-- the bottom client image -->
     <div class="clients hidden-print">
-        <div class="container row">
+        <div class="container row hidden-xs">
                 <div class="thumbnail col-md-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/AAEAAQAAAAAAAAOjAAAAJDQ4ZDQyNjdiLTUyNjgtNDIwZi04NWM1LTIzYjJiNGU0MTVmZg.png" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/2785318.png" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/thumbnails/94036927-64x64.jpg" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/AAEAAQAAAAAAAAIcAAAAJDQyZmY5YWNmLWY4NjMtNDExNC1iNDMwLTAzNjUwMmJjMDM3ZQ.png" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/1292b3a.png" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/thumbnails/62125600-64x64.jpg" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/thumbnails/30014888-64x64.jpg" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/thumbnails/77364798-64x64.jpg" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/thumbnails/14992183-64x64.jpg" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/thumbnails/8576888-64x64.jpg" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/thumbnails/63074657-64x64.jpg" alt="">
                 </div>
-                <div class="thumbnail col-md-1">
+                <div class="thumbnail col-md-1 col-sm-1">
                     <img src="http://swiftintern.com/public/assets/uploads/images/thumbnails/9015320-64x64.jpg" alt="">
                 </div>
         </div>
