--- a/application/views/onlinetest/addques.html
+++ b/application/views/onlinetest/addques.html
@@ -15,7 +15,7 @@
                 <div class="panel panel-default panel-body">
                     <div class="form-group">
                         <label>Question *</label>
-                        <input type="text" name="question" class="form-control" maxlength="100" required="">
+                        <input type="text" name="question" class="form-control" required="">
                     </div>
 
                     <div class="form-group">
