Test Panel updated

--- a/application/views/onlinetest/test.html
+++ b/application/views/onlinetest/test.html
@@ -20,6 +20,7 @@
         <span class="label"><%= label.length < 6 ? label : label.substr(0, 3)  %></span>
     </div>
    </script>
+   <div id="testTimeLimit" class="hide">{echo $test->time_limit}</div>
    <script type="text/javascript" src="{echo CDN}/js/timer.js"></script>
 
     <div class="row">
