--- a/application/views/training/quick_apply.html
+++ b/application/views/training/quick_apply.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="form-group">
                     <label>Phone</label>
-                    <input type="tel" name="phone" class="form-control" placeholder="Primary Phone" required="">
+                    <input type="text" name="phone" class="form-control" placeholder="Primary Phone" required="">
                     <span class="help-text">Companies may contact you directly</span>
                 </div>
             </div>
