updated testimonials display

--- a/application/views/admin/index.html
+++ b/application/views/admin/index.html
@@ -36,10 +36,11 @@
                     <a class="list-group-item active text-center">
                         <i class="fa fa-support"></i> Support
                     </a>
-                    <a href="http://www.slideshare.net/swiftintern" class="list-group-item"><i class="fa fa-slideshare fa-2x"></i>  SlideShare</a>
-                    <a href="https://github.com/Swiftintern/Swiftintern/issues" class="list-group-item"><i class="fa fa-exclamation-circle fa-2x"></i>  Submit a Issue</a>
-                    <a href="/admin/support" class="list-group-item"><i class="fa fa-ticket fa-2x"></i>  Support Tickets</a>
-                    <a href="admin/search?model=blogpost&key=validity&sign=like&value=0" class="list-group-item"><i class="fa fa-comments fa-2x"></i>Blog Post</a>
+                    <a href="http://www.slideshare.net/swiftintern" class="list-group-item"><i class="fa fa-slideshare fa-2x"></i> SlideShare</a>
+                    <a href="https://github.com/Swiftintern/Swiftintern/issues" class="list-group-item"><i class="fa fa-exclamation-circle fa-2x"></i> Submit a Issue</a>
+                    <a href="/admin/support" class="list-group-item"><i class="fa fa-ticket fa-2x"></i> Support Tickets</a>
+                    <a href="admin/search?model=blogpost&amp;key=validity&amp;sign=like&amp;value=0" class="list-group-item"><i class="fa fa-comments fa-2x"></i> Blog Post</a>
+                    <a href="/admin/search?model=experience&amp;key=organization_id&amp;sign=equal&value=1574" class="list-group-item"><i class="fa fa-support fa-2x"></i> See Testimonials</a>
                 </div>
             </div>
 
