--- a/application/views/employer/register.html
+++ b/application/views/employer/register.html
@@ -4,7 +4,10 @@
         <div class="alert alert-danger" role="alert">{echo $message}</div>
         {/if}
         <p class="text-center"><a href="{echo $url}" class="btn btn-primary"><i class="fa fa-linkedin fa-lg"></i>  | Continue with Linkedin</a></p>
-        <small class="help-block text-center">Note : Only Users having Company page on linkedin can post internship on our site, we take authenticity of listing very seriously</small>
+        <small class="help-block text-center">
+            Note : Only Users having Company page on linkedin can post internship on our site, we take authenticity of listing very seriously<br>
+            <a href="/users/access">Cant Login?</a>
+        </small>
     </div>
     <h1 class="page-header">Why Us?</h1>
     <div class="row">
