--- a/application/views/users/access.html
+++ b/application/views/users/access.html
@@ -9,7 +9,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">Email</label>
                             <div class="col-sm-10">
-                                <input type="email" name="email" class="form-control" placeholder="Enter Email">
+                                <input type="email" name="email" class="form-control" placeholder="Enter your registered Email">
                             </div>
                         </div>
                         <div class="form-group">
