Access token done

--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -9,7 +9,7 @@
     <meta name="description" content="{echo strip_tags($seo->getDescription())}" />
     <meta name="keywords" content="{echo strip_tags($seo->getKeywords())}">
     <meta name="author" content="{echo $seo->getAuthor()}" />
-    <meta name="msvalidate.01" content="B1BCAA5861C00450565B6B8C742070DF" />
+    <meta name="google-site-verification" content="jj2DWbl1p-302RiX9E87SHW7fneubCEd4P09iZXFRms" />
     <meta name="copyright" content="SWIFTDEAL ONLINE LLP 2015">
     <meta name="email" content="info[at]swiftintern[dot]com">
     <meta http-equiv="Content-Language" content="en">
@@ -169,7 +169,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="{echo CDN}plugins/bootbox/bootbox.min.js"></script>
     <script type="text/javascript" src="{echo CDN}js/model.js"></script>
-    <script type="text/javascript" src="{echo CDN}js/public-3.1.js"></script>
+    <script type="text/javascript" src="{echo CDN}js/public-3.11.js"></script>
 </body>
 
 </html>
