--- a/application/views/layouts/standard.html
+++ b/application/views/layouts/standard.html
@@ -63,6 +63,17 @@
 
 <body>
     {include layouts/navigation/public.html} {include layouts/modal/message.html} {ayield action}
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Sidebar add -->
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-7190354762477214"
+         data-ad-slot="9469395684"
+         data-ad-format="auto">
+    </ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <!-- the bottom client image -->
     <div class="clients hidden-print">
         <div class="container row hidden-xs">
