--- a/application/views/training/index.html
+++ b/application/views/training/index.html
@@ -1,6 +1,6 @@
 <header class="sb-page-header">
     <div class="container">
-        <h1>Workshops and Training</h1>
+        <h1>Workshops and Events</h1>
     </div>
 </header>
 <div class="container">
