--- a/application/views/layouts/navigation/public.html
+++ b/application/views/layouts/navigation/public.html
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/resume-for-internship" class="whitetext"><i class="fa fa-file-text-o fa-lg"></i> Create Resume</a></li>
                 <li><a href="/onlinetest" class="whitetext hidden-sm"><i class="fa fa-clock-o fa-lg"></i> Online Test</a></li>
-                <li><a href="/training" class="whitetext hidden-sm"><i class="fa fa-black-tie fa-lg"></i> Workshops</a></li>
+                <li><a href="/training" class="whitetext hidden-sm"><i class="fa fa-black-tie fa-lg"></i> Workshops / Events</a></li>
             </ul>
             <!-- the menu -->
             <div class="navbar-right">
